change git username to mine

--- a/config/git/config
+++ b/config/git/config
@@ -1,12 +1,12 @@
 [user]
-	name = Lars Kappert
-	email = lars@webpro.nl
+	name = Vibert Thio
+	email = vibertthio@gmail.com
 
 [github]
-	user = webpro
+	user = vibertthio
 
 [core]
-	excludesfile = ~/.config/git/ignore
+	excludesfile = /Users/vibertthio/.config/git/ignore
 	editor = nano
 	filemode = false
 	trustctime = false
@@ -63,7 +63,7 @@
 [difftool "Kaleidoscope"]
 	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
 [difftool "sourcetree"]
-	cmd = /usr/local/bin/ksdiff -w \"$LOCAL\" \"$REMOTE\"
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
 	path = 
 
 [merge]
@@ -76,7 +76,7 @@
 	cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
 	trustExitCode = true
 [mergetool "sourcetree"]
-	cmd = /usr/local/bin/ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 
 [color]
@@ -99,3 +99,5 @@
 	oldHighlight = red bold 52
 	newNormal = green bold
 	newHighlight = green bold 22
+[commit]
+	template = /Users/vibertthio/.stCommitMsg
