--- a/config/git/config
+++ b/config/git/config
@@ -39,7 +39,7 @@
 	cr = clone --recursive
 	df = diff --word-diff
 	g = grep --break --heading --line-number
-	l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	l = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit -8
 	ld = "!sh -c \"git log --since '${1:-1} days ago' --oneline --author $(git config user.email)\" -"
 	lg = log -p
 	ll = log --pretty=oneline --graph --abbrev-commit
@@ -49,9 +49,9 @@
 	pf = push --force
 	pr = "!f() { git fetch -fu ${2:-origin} refs/pull/$1/head:pr/$1 && git checkout pr/$1; }; f"
 	show-ignored = "! git clean -ndX | perl -pe 's/Would remove/Ignored:/'"
+	s = status -sb
 	st = status
 	stl = ls-files -m -o --exclude-standard
-	sts = status -sb
 	unstage = reset --hard HEAD
 
 [diff]
