--- a/config/git/config
+++ b/config/git/config
@@ -7,7 +7,7 @@
 
 [core]
 	excludesfile = /Users/vibertthio/.config/git/ignore
-	editor = nano
+	editor = vim
 	filemode = false
 	trustctime = false
 	autocrlf = input
